--- a/Warehouse Management System/Warehouse Management System.csproj
+++ b/Warehouse Management System/Warehouse Management System.csproj
@@ -52,25 +52,34 @@
     <Compile Include="Form Authorization.Designer.cs">
       <DependentUpon>Form Authorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form Registration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form Registration.Designer.cs">
+      <DependentUpon>Form Registration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form Authorization.resx">
       <DependentUpon>Form Authorization.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form Registration.resx">
+      <DependentUpon>Form Registration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -82,6 +91,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="images\login.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="images\add-user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="images\hide.png" />
+    <Content Include="images\show.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
